Bug 326550 The dots in the focus outline do not match trunk builds(draw focus using something other than XOR). This is for comment 8 problem (the outline always drawn black) r+sr=roc